--- a/Boldxp/index.html
+++ b/Boldxp/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Boldxp</title>
-  <base href="/BoldXP-test/">
+  <base href="https://casher0009.github.io/BoldXP-test/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.34c57ab7888ec1573f9c.css"></head>
